@@ -355,7 +355,7 @@ struct mne *mp;
 				outrb(&e2, R_USGN);
 			break;
 		case S_REG:
-			altaccw2(r1,r2);
+			altaccw2(r1, r2);
 			outab(op | 0x03);
 			break;
 		default:
@@ -497,7 +497,7 @@ opw:
 				outrw(&e1, R_USGN);
 				break;
 			case S_IX:
-				if(r1 == Y && (r2 == XL || r2 == XH))
+				if(r1 == Y && (r2 == XL || r2 == XH || r2 == ZL || r2 == ZH))
 					outab(op | 0x0e);
 				else if (r1 == Z && r2 == YL || r1 == X && r2 == ZL)
 					outab(0x8e);
@@ -623,20 +623,20 @@ opw:
 			}
 			break;
 		}
-		else if(t1 == S_IX && t2 == S_REG && (r1 == Y && r2 == X || r1 == Z && r2 == Y || r1 == X && r2 == Z)) {
-			altaccw(r1);
+		else if(t1 == S_IX && t2 == S_REG && (r1 == Y && r2 == X || r1 == Z && r2 == Y || r1 == X && r2 == Z || r1 == Y && r2 == Z)) {
+			altaccw2(r1, r2);
 			outab(0xcd);
 			break;
 		}
-		else if(t1 == S_YREL && t2 == S_REG && r2 == X) {
+		else if(t1 == S_YREL && t2 == S_REG && (r2 == X || r2 == Z)) {
+			if (r2 == Z)
+				outab (OPCODE_ALTACC3);
 			if(!ls_mode(&e2)) {
 				outab(0xce);
 				outrb(&e1, R_USGN);
 			}
-			else {
-				outab(0xcf);
-				outrw(&e1, R_USGN);
-			}
+			else
+				aerr();
 			break;
 		}
 		else if(t2 == S_REG) {
@@ -874,10 +874,7 @@ opw:
 		t2 = addr(&e2);
 		r2 = rcode;
 sex:
-		if(t1 != S_REG || t2 != S_REG ||
-			!(r1 == Y && r2 == XL || r1 == Y && r2 == XH || r1 == Z && r2 == YL || r1 == X && r2 == ZL || r1 == Y && r2 == ZH))
-			aerr();
-		altacc(r2);
+		altaccw2(r1, r2);
 		outab(op);
 		break;	
 
@@ -1279,13 +1276,17 @@ void altaccw(int reg)
 extern
 void altaccw2(int reg0, int reg1)
 {
-	if(reg0 == Y && reg1 == X)
+	if(reg0 == Y && (reg1 == X || reg1 == XL))
 		;
-	else if (reg0 == Z && reg1 == Y)
+	else if (reg0 == Y && (reg1 == XH))
+		outab(OPCODE_ALTACC1);
+	else if (reg0 == Z && (reg1 == Y  || reg1 == YL))
 		outab(OPCODE_ALTACC2);
-	else if (reg0 == X && reg1 == Z)
+	else if (reg0 == X && (reg1 == Z  || reg1 == ZL))
 		outab(OPCODE_ALTACC3);
-	else if (reg0 == Y && reg1 == Z)
+	else if (reg0 == Z && (reg1 == YH))
+		outab(OPCODE_ALTACC4);
+	else if (reg0 == Y && (reg1 == Z  || reg1 == ZH))
 		outab(OPCODE_ALTACC5);
 	else
 		aerr ();
