@@ -1,3 +1,12 @@
+2024-11-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sdas/asf8/f8mch.c,
+	  sim/ucsim/src/sims/f8.src/f8cl.h,
+	  sim/ucsim/src/sims/f8.src/glob.cc:
+	  ld(w) prefix fixes.
+	* src/f8/gen.c:
+	  Improve f8 codegen for writes via pointer.
+
 2024-11-25 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/Makefile.in
